--- a/index.html
+++ b/index.html
@@ -25,6 +25,47 @@
         <input type="number" name="petCount">
       </label>
 
+      <label>Why do you want to adopt a new pet?
+        <textarea name="applicantReason" rows="4" cols="50">Because I don't have enough cat hair on my sofa :(</textarea>
+      </label>
+
+      <fieldset>
+        <legend>What types of animals are you interested in? </legend>
+        <label>Dogs
+          <input type="checkbox" name="species" value="dogs">
+        </label>
+        <label>Cats
+          <input type="checkbox" name="species" value="cats">
+        </label>
+        <label>Birds
+          <input type="checkbox" name="species" value="birds">
+        </label>
+        <label>Rats
+          <input type="checkbox" name="species" value="rats">
+        </label>
+      </fieldset>
+
+      <fieldset>
+        <legend>Are you interestedin adopting special needs or elderly pets?</legend>
+        <label>
+          <input type="radio" name="special" value="yes">
+          Yes
+        </label>
+        <label>
+          <input type="radio" name="special" value="no">
+          No
+        </label>
+      </fieldset>
+        <label> How many hours a day is someone usually home ot keep a pet company?
+          <select name="hours">
+            <option value="">Please select</option>
+            <option value="few">less than 10</option>
+            <option value="some">10 to 16</option>
+            <option value="many">more than 16</option>
+          </select>
+        </label>
+
+
       <label>To create an account, enter a password
         <input type="password" name="accountPW">
       </label>
