--- a/index.html
+++ b/index.html
@@ -29,24 +29,28 @@
         <textarea name="applicantReason" rows="4" cols="50">Because I don't have enough cat hair on my sofa :(</textarea>
       </label>
 
-      <fieldset>
+      <fieldset class="checkbox">
         <legend>What types of animals are you interested in? </legend>
         <label>Dogs
           <input type="checkbox" name="species" value="dogs">
+          <span class="checkmark"></span>
         </label>
         <label>Cats
           <input type="checkbox" name="species" value="cats">
+          <span class="checkmark"></span>
         </label>
         <label>Birds
           <input type="checkbox" name="species" value="birds">
+          <span class="checkmark"></span>
         </label>
         <label>Rats
           <input type="checkbox" name="species" value="rats">
+          <span class="checkmark"></span>
         </label>
       </fieldset>
 
       <fieldset>
-        <legend>Are you interestedin adopting special needs or elderly pets?</legend>
+        <legend>Are you interested in adopting special needs or elderly pets?</legend>
         <label>
           <input type="radio" name="special" value="yes">
           Yes
